--- a/page.html
+++ b/page.html
@@ -31,6 +31,7 @@
           ctx.arc(mouseX-10, mouseY-10, 20, 0, 2*Math.PI);
           ctx.fill();
           ctx.stroke();
+          ctx.moveTo(mouseX, mouseY);
           //ctx.beginPath();
       };
 
